<resources>

    <string name="app_name">SimpleCalculator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_calculator_main">CalculatorMainActivity</string>
    <string name="clear_string">Clear</string>
    <string name="onestring">1</string>
    <string name="twostring">2</string>
    <string name="threestring">3</string>
    <string name="fourstring">4</string>
    <string name="fivestring">5</string>
    <string name="sixstring">6</string>
    <string name="sevenstring">7</string>
    <string name="eightstring">8</string>
    <string name="ninestring">9</string>
    <string name="zerostring">0</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <color name="white">#ffffff</color>


</resources>